# milvus-labs

./: .gitignore  Makefile  pyproject.toml
scripts/: computing_embedding_vectors.py
