[tool.poetry]
name = "milvus-labs"
version = "0.1.0"
description = ""
authors = ["twocucao <twocucao@gmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "aliyun"
url = 'https://mirrors.aliyun.com/pypi/simple/'
default = true

[tool.poetry.dependencies]
python = "^3.9"
ipython = "*"
uvicorn = "*"
pymilvus = "^1.1.2"
towhee = "^0.4.0"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]
black = "*"
autoflake = "*"
coverage = "*"
"flake8" = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
sqlalchemy2-stubs = "0.0.2a8"
pytest-asyncio = "^0.15.1"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry.scripts]
fastcli = 'tifa.cli:cli'
tifa-cli = 'tifa.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

